Rotiamento e custom ng-model

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxFlex [class.dark-theme]="isDarkTheme">
+<div class="content" fxLayout="column" fxFlex [class.dark-theme]="isDarkTheme">
 
   <app-ngc-header (changeTheme)="changeTheme($event)"></app-ngc-header>
 
