--- a/src/app/ngc-menu/ngc-menu.component.html
+++ b/src/app/ngc-menu/ngc-menu.component.html
@@ -1,10 +1,8 @@
-
-
 <md-sidenav-container>
   <md-sidenav mode="side" opened="true">
     <ul>
       <li *ngFor="let item of items">
-        <button md-button fxLayoutAlign="start" fxLayoutGap="4px"><md-icon>{{item.icon}}</md-icon>{{item.label}}</button>
+        <button md-button fxLayoutAlign="start" fxLayoutGap="4px" routerLink="/pessoa"><md-icon>{{item.icon}}</md-icon>{{item.label}}</button>
       </li>
     </ul>
   </md-sidenav>
