--- a/src/app/ngc-conteudo/ngc-conteudo.component.html
+++ b/src/app/ngc-conteudo/ngc-conteudo.component.html
@@ -1,14 +1,15 @@
-<div class="content" fxLayout="row" fxLayout.sm="column" fxLayoutGap="16px" fxFlex>
+<div class="content" fxLayout="row" fxLayout.sm="column" fxLayoutGap="8px" fxFlex>
   <div>
   </div>
-  
-  <md-card>
-    <md-icon svgIcon="avatars:{{selectedUser.avatar}}" class="avatar"></md-icon>
+
+  <md-card fxFlex>
+    <!-- <md-icon svgIcon="avatars:{{selectedUser.avatar}}" class="avatar"></md-icon>
     <h2>{{selectedUser.name}}</h2>
-    <p>{{selectedUser.details}}</p>
+    <p>{{selectedUser.details}}</p> -->
+    <router-outlet></router-outlet>
   </md-card>
 
-  <md-card fxFlex fxLayout="column" fxLayoutGap="14px">
+  <md-card fxLayout="column" fxLayoutGap="14px">
     <md-slide-toggle [(ngModel)]="selectedUser.isAdmin">Is Admin?</md-slide-toggle>
     <md-slide-toggle [(ngModel)]="selectedUser.isCool">Is Cool?</md-slide-toggle>
   </md-card>
